<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_100"
    android:clickable="true"
    android:focusable="true"
    tools:context=".mainFragment.searchPage.SearchFragment">

    <View
        android:id="@+id/search_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/search_bar_bg"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/search_search_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/search_bar_description"
        android:src="@drawable/baseline_search_24"
        app:layout_constraintBottom_toBottomOf="@+id/search_search"
        app:layout_constraintEnd_toEndOf="@id/search_search"
        app:layout_constraintTop_toTopOf="@+id/search_search" />

    <EditText
        android:id="@+id/search_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/search_result_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="30"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/search_search"
        app:layout_constraintEnd_toStartOf="@id/search_search_icon"
        app:layout_constraintStart_toStartOf="@id/search_search"
        app:layout_constraintTop_toTopOf="@id/search_search" />

    <View
        android:id="@+id/search_top_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="30dp"
        android:background="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_input" />

    <TextView
        android:id="@+id/search_type_label"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="25dp"
        android:text="@string/search_type"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_top_line" />

    <Spinner
        android:id="@+id/search_type"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="22dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_type_label"
        app:layout_constraintTop_toBottomOf="@id/search_top_line" />

    <TextView
        android:id="@+id/search_range_label"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="25dp"
        android:text="@string/search_price"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_type_label" />

    <EditText
        android:id="@+id/search_min"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/search_bar_bg"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="5"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/search_range_label"
        app:layout_constraintTop_toBottomOf="@id/search_type" />

    <TextView
        android:id="@+id/search_range"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/search_to_sign"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/search_min"
        app:layout_constraintTop_toBottomOf="@id/search_type" />

    <EditText
        android:id="@+id/search_max"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/search_bar_bg"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="5"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/search_range"
        app:layout_constraintTop_toBottomOf="@id/search_type" />

    <View
        android:id="@+id/search_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="30dp"
        android:background="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_max" />

    <Button
        android:id="@+id/search_go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/search_search"
        app:layout_constraintTop_toBottomOf="@id/search_bottom_line" />

</androidx.constraintlayout.widget.ConstraintLayout>