<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_100"
    android:clickable="true"
    android:focusable="true"
    tools:context=".user.UserDetailFragment">

    <!--Clickable can stop click event pass though this fragment-->

    <RelativeLayout
        android:id="@+id/user_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/beige_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/user_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/beige_500"
            app:contentInsetStart="0dp">

            <include
                android:id="@+id/user_code_image_back"
                layout="@layout/back_button_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user_detail_title" />

            <TextView
                android:id="@+id/user_detail_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:text="@string/user_detail_save"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/user_detail_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@id/user_detail_toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/user_icon_description"
            android:elevation="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/user_icon_default"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_detail_icon"
            android:layout_toEndOf="@id/user_detail_icon"
            android:contentDescription="@string/modify_icon_description"
            android:src="@drawable/baseline_draw_24"
            android:translationX="-20dp"
            android:translationY="-20dp" />

        <TextView
            android:id="@+id/user_detail_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_detail_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:textSize="25sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/user_detail_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_detail_layout" />

    <TextView
        android:id="@+id/user_detail_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_detail_no" />

    <TextView
        android:id="@+id/user_detail_last_name_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/user_detail_last_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_detail_email" />

    <EditText
        android:id="@+id/user_detail_last_name_ed"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:hint="@string/user_detail_last_name"
        android:inputType="text"
        android:maxLength="12"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/user_detail_last_name_tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_detail_last_name_tag" />

    <TextView
        android:id="@+id/user_detail_first_name_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/user_detail_first_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_detail_last_name_tag" />

    <EditText
        android:id="@+id/user_detail_first_name_ed"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:hint="@string/user_detail_first_name"
        android:inputType="text"
        android:maxLength="12"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/user_detail_first_name_tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_detail_first_name_tag" />

    <TextView
        android:id="@+id/user_detail_address_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/user_detail_address"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_detail_first_name_tag" />

    <EditText
        android:id="@+id/user_detail_address_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:hint="@string/user_detail_address"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/user_detail_address_tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_detail_address_tag" />


</androidx.constraintlayout.widget.ConstraintLayout>