<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_100"
    android:clickable="true"
    android:focusable="true"
    tools:context=".login.fragment.RegisterFragment">

    <include
        android:id="@+id/user_code_image_back"
        layout="@layout/back_button_light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/register_relative_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/register_email_tv"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:background="@color/beige_300"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/register_email" />

            <EditText
                android:id="@+id/register_email_rt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="15dp"
                android:layout_toEndOf="@id/register_email_tv"
                android:autofillHints="username"
                android:hint="@string/register_email"
                android:inputType="textEmailAddress"
                android:maxLength="50" />

            <TextView
                android:id="@+id/register_id_tv"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_below="@id/register_email_tv"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:background="@color/beige_300"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/login_ac_name" />

            <EditText
                android:id="@+id/register_id_rt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/register_email_rt"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="15dp"
                android:layout_toEndOf="@id/register_id_tv"
                android:autofillHints="username"
                android:hint="@string/login_ac_name"
                android:inputType="text"
                android:maxLength="12" />

            <TextView
                android:id="@+id/register_password_tv"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_below="@id/register_id_tv"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:background="@color/beige_300"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/login_ac_password" />

            <EditText
                android:id="@+id/register_password_rt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/register_id_rt"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="15dp"
                android:layout_toEndOf="@id/register_password_tv"
                android:autofillHints="password"
                android:hint="@string/login_ac_password"
                android:inputType="textPassword"
                android:maxLength="18" />

            <TextView
                android:id="@+id/register_confirm_tv"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_below="@id/register_password_tv"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:background="@color/beige_300"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/register_confirm" />

            <EditText
                android:id="@+id/register_confirm_rt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/register_password_rt"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="15dp"
                android:layout_toEndOf="@id/register_confirm_tv"
                android:autofillHints="password"
                android:hint="@string/register_confirm_hint"
                android:inputType="textPassword"
                android:maxLength="18" />

            <Button
                android:id="@+id/register_register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_confirm_tv"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="15dp"
                android:text="@string/register_register_btn"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/register_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_register_btn"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/dark_red"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/register_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_message"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/register_have_ac_btn"
                android:textSize="20sp" />

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>